add new sections to view

--- a/SingularityUI/app/templates/taskDetail/taskBase.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskBase.hbs
@@ -20,6 +20,10 @@
         
     </div>
 
+    <div id='health-checks' class='col-md-12'>
+        
+    </div>
+    
     <div id='info' class='col-md-12'>
         
     </div>
