--- a/SingularityUI/app/templates/taskDetail/taskLbUpdates.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskLbUpdates.hbs
@@ -26,7 +26,7 @@
                                {{message}}
                             </td>
                             <td class="actions-column">
-                                <a data-lb-index="{{@index}}" data-action="viewLbJSON" title="JSON">
+                                <a data-key="loadBalancerUpdates" data-index="{{@index}}" data-action="viewJsonProperty" title="JSON">
                                     { }
                                 </a>
                             </td>
