--- a/SingularityUI/app/templates/taskDetail/taskLbUpdates.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskLbUpdates.hbs
@@ -1,45 +1,47 @@
 {{#if synced}}
-    <div class="page-header">
-        <h2>Load Balancer State</h2>
-    </div>
-    {{#ifGT data.loadBalancerUpdates.length 0}}
-        <div class="table-container">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Updated</th>
-                        <th>State</th>
-                        <th>Message</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{#each data.loadBalancerUpdates}}
+    {{#ifEqual data.task.taskRequest.request.loadBalanced true}}
+        <div class="page-header">
+            <h2>Load Balancer Updates</h2>
+        </div>
+        {{#ifGT data.loadBalancerUpdates.length 0}}
+            <div class="table-container">
+                <table class="table table-striped">
+                    <thead>
                         <tr>
-                            <td>
-                               {{timestampFormatted timestamp}}
-                            </td>
-                            <td>
-                               {{humanizeText loadBalancerState}}
-                            </td>
-                            <td>
-                               {{message}}
-                            </td>
-                            <td class="actions-column">
-                                <a data-key="loadBalancerUpdates" data-index="{{@index}}" data-action="viewJsonProperty" title="JSON">
-                                    { }
-                                </a>
-                            </td>
+                            <th>Updated</th>
+                            <th>State</th>
+                            <th>Message</th>
+                            <th></th>
                         </tr>
-                    {{/each}}
-                </tbody>
-            </table>
-        </div>
-    {{else}}
-        <div class="empty-table-message">
-            No Load Balancer Info
-        </div>
-    {{/ifGT}}
+                    </thead>
+                    <tbody>
+                        {{#each data.loadBalancerUpdates}}
+                            <tr>
+                                <td>
+                                   {{timestampFormatted timestamp}}
+                                </td>
+                                <td>
+                                   {{humanizeText loadBalancerState}}
+                                </td>
+                                <td>
+                                   {{message}}
+                                </td>
+                                <td class="actions-column">
+                                    <a data-key="loadBalancerUpdates" data-index="{{@index}}" data-action="viewJsonProperty" title="JSON">
+                                        { }
+                                    </a>
+                                </td>
+                            </tr>
+                        {{/each}}
+                    </tbody>
+                </table>
+            </div>
+        {{else}}
+            <div class="empty-table-message">
+                No Load Balancer Info
+            </div>
+        {{/ifGT}}
+    {{/ifEqual}}
 {{else}}
     <div class="page-loader centered cushy"></div>
 {{/if}}
