--- a/SingularityUI/app/templates/taskDetail/taskLbUpdates.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskLbUpdates.hbs
@@ -8,7 +8,7 @@
                 <table class="table table-striped">
                     <thead>
                         <tr>
-                            <th>Updated</th>
+                            <th>Timestamp</th>
                             <th>State</th>
                             <th>Message</th>
                             <th></th>
