--- a/SingularityUI/app/styles/main.styl
+++ b/SingularityUI/app/styles/main.styl
@@ -66,6 +66,15 @@ code
     background rgba(0, 0, 0, .05)
     color rgba(0, 0, 0, .75)
 
+.healthcheck-message
+    white-space pre-line
+
+.healthcheck-link
+    font-weight bolder
+
+.healthcheck-number
+    font-weight bolder
+
 .flash-background
     background: #fbfbfb
 
