--- a/SingularityUI/app/templates/tailLogLines.hbs
+++ b/SingularityUI/app/templates/tailLogLines.hbs
@@ -1,3 +1,3 @@
 {{#each lines}}
-    <div class="line" data-offset="{{ offset }}">{{ data }}</div>
+    <div id='line-{{offset}}' class="line" data-offset="{{ offset }}"><a class='copy-link' data-clipboard-text='{{../url}}#{{offset}}'><span class="glyphicon glyphicon-link"></span> </a>{{ data }}</div>
 {{/each}}
