highlight tail line on click

--- a/SingularityUI/app/styles/tailer.styl
+++ b/SingularityUI/app/styles/tailer.styl
@@ -62,7 +62,14 @@
         .copy-link
             text-decoration none
             visibility hidden
-            padding-left 5px
+            position absolute
+            left 0
+            padding-left: 5px
+            background #f6f6f6
+    
+
+.lines-wrapper
+    overflow scroll
     
 
 // Edge of fetched log content indicators/spinners (start hidden and toggled by Backbone)
@@ -104,3 +111,5 @@
             display inline-block
 
         
+.highlightLine
+    background: #F8EEC7
