refactor copy/offset language

--- a/SingularityUI/app/styles/detailHeader.styl
+++ b/SingularityUI/app/styles/detailHeader.styl
@@ -9,7 +9,7 @@
         text-overflow ellipsis
         position relative
 
-        .btn.copy-link
+        .btn.offset-link
             background #fff
 
             &:hover, &:focus
