--- a/SingularityUI/app/styles/tailer.styl
+++ b/SingularityUI/app/styles/tailer.styl
@@ -56,10 +56,10 @@
         white-space pre
     
         &:hover
-            .copy-link
+            .offset-link
                 visibility visible
 
-        .copy-link
+        .offset-link
             text-decoration none
             visibility hidden
             position absolute
