--- a/SingularityExecutor/src/main/resources/docker.sh.hbs
+++ b/SingularityExecutor/src/main/resources/docker.sh.hbs
@@ -6,7 +6,8 @@
 
 set -e
 
-# Wrappers for running docker containers
+STOP_TIME=5 # Max time to wait for container to stop before killing
+
 function ensure_started_container {
   exists=`sudo -E -u {{{ runContext.user }}} docker inspect -f \{{.State.Running}} $1`
   if [ "$?" = "true" ] ; then
@@ -27,21 +28,21 @@ function setup_signals {
 }
 
 function handle_signal {
-  echo "[docker-exec] received $2"
+  echo "Received $2"
   case "$2" in
     SIGINT)
-      output=`sudo -E -u {{{ runContext.user }}} docker stop -t 5 "$1"`
-      echo "[sudo -E -u {{{ runContext.user }}} docker stop] $output"
+      echo "Stopped via sudo -E -u {{{ runContext.user }}} docker stop $1"
+      sudo -E -u {{{ runContext.user }}} docker stop -t $STOP_TIME "$1"
       running=0
       ;;
     SIGTERM)
-      output=`sudo -E -u {{{ runContext.user }}} docker stop -t 5 "$1"`
-      echo "[sudo -E -u {{{ runContext.user }}} docker stop] $output"
+      echo "Stopped via sudo -E -u {{{ runContext.user }}} docker stop $1"
+      sudo -E -u {{{ runContext.user }}} docker stop -t $STOP_TIME "$1"
      running=0
       ;;
     SIGHUP)
-      output=`sudo -E -u {{{ runContext.user }}} docker restart -t 5 "$1"`
-      echo "[sudo -E -u {{{ runContext.user }}} docker restart] $output"
+      echo "Restarting with sudo -E -u {{{ runContext.user }}} docker restart -t 5 $1"
+      sudo -E -u {{{ runContext.user }}} docker restart -t $STOP_TIME "$1"
 
       # restart logging
       sudo -E -u {{{ runContext.user }}}  >> {{{ runContext.logFile }}} 2>&1 &
@@ -57,9 +58,7 @@ sudo -E -u {{{ runContext.user }}} docker pull $DOCKER_IMAGE
 DOCKER_ENV="-e MESOS_TASK_ID={{{bashEscaped runContext.taskId}}}"
 
 # load env vars
-{{#each envContext.env}}
-DOCKER_ENV="$DOCKER_ENV -e {{{name}}}={{{bashEscaped value}}}"
-{{/each}}
+{{#each envContext.env}}DOCKER_ENV="$DOCKER_ENV -e {{{name}}}={{{bashEscaped value}}}"{{/each}}
 
 # Create log directory for logrotate runs
 if [[ ! -d {{{ runContext.logDir }}} ]]; then
@@ -80,27 +79,28 @@ else
 fi
 
 # set up port mappings
-{{#each envContext.dockerInfo.portMappingsList}}
-DOCKER_PORTS="$DOCKER_PORTS -p {{{ hostPort }}}:{{{ containerPort }}}"
-{{/each}}
+{{#each envContext.dockerInfo.portMappingsList}}DOCKER_PORTS="$DOCKER_PORTS -p {{{ hostPort }}}:{{{ containerPort }}}"{{/each}}
 
 # set up attached volumes
 DOCKER_VOLUMES="-v `pwd`:/mnt/mesos/sandbox"
 DOCKER_ENV="$DOCKER_ENV -e MESOS_SANDBOX=/mnt/mesos/sandbox"
+DOCKER_ENV="$DOCKER_ENV -e LOG_DIR=/mnt/mesos/sandbox/logs"
 {{#each envContext.containerVolumes}}
-DOCKER_VOLUMES="$DOCKER_VOLUMES -v {{{ hostPath }}}:{{{ containerPath }}}"
+{{#if mode}}raw_mode={{{ mode }}}{{/if}}
+DOCKER_VOLUMES="$DOCKER_VOLUMES -v {{{ hostPath }}}:{{{ containerPath }}}{{#if mode}}:${raw_mode,,}{{/if}}"
 {{/each}}
 
 # set up network config
 {{#if envContext.dockerInfo.network}}
 raw_network={{envContext.dockerInfo.network}}
-DOCKER_NETWORK="--net=${raw_network,,}" #downcase
+DOCKER_NETWORK="--net=${raw_network,,}"
 {{else}}
 DOCKER_NETWORK="--net=host"
 {{/if}}
 
 DOCKER_OPTIONS="-d --name={{{ runContext.taskId }}} $DOCKER_NETWORK $DOCKER_ENV $DOCKER_VOLUMES $DOCKER_PORTS"
 
+# Start up the container
 running=0
 
 echo "Starting continer with: sudo -E -u {{{ runContext.user }}} docker run $DOCKER_OPTIONS $DOCKER_IMAGE /bin/sh -c {{{bashEscaped runContext.cmd }}}"
@@ -110,6 +110,7 @@ setup_signals "$cid" "handle_signal" SIGINT SIGTERM SIGHUP
 
 ensure_started_container "$cid"
 
+# Attach for logging and wait for signals, then exit with container exist status
 sudo -E -u {{{ runContext.user }}} docker attach "$cid" >> {{{ runContext.logFile }}} 2>&1 &
 logger_pid="$!"
 
