Make Singularity log level an attribute

--- a/cookbook/templates/default/singularity.base.properties.erb
+++ b/cookbook/templates/default/singularity.base.properties.erb
@@ -1,4 +1,4 @@
 logwatcher.metadata.directory=.
 s3uploader.metadata.directory=.
 root.log.directory=<%= node[:singularity][:log_dir] %>
-hubspot.log.level=DEBUG
+hubspot.log.level=<%= node[:singularity][:log_level] %>
