--- a/SingularityUI/app/templates/taskDetail/taskHealthChecks.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskHealthChecks.hbs
@@ -3,6 +3,14 @@
         <div class="page-header">
             <h2>Healthchecks</h2>
         </div>
+        {{#ifGT data.healthcheckResults.length 1}}
+            <div class="checkbox">
+                <label>
+                    <input id="toggle-Healthchecks" {{#if data.showRecentHealthchecksOnly}}{{else}}checked="checked"{{/if}} type="checkbox"> 
+                    <strong>Show all Healthchecks </strong>
+                </label>
+            </div>
+        {{/ifGT}}
         <div class="well">
             Beginning on <span class="healthcheck-number">Task running</span>, hit <a class="healthcheck-link" target="_blank" href="http://{{data.task.offer.hostname}}:{{data.ports.[0]}}{{data.task.taskRequest.deploy.healthcheckUri}}">{{data.task.taskRequest.deploy.healthcheckUri}}</a> with a <span class="healthcheck-number">{{#if data.task.taskRequest.deploy.healthcheckTimeoutSeconds}}{{data.task.taskRequest.deploy.healthcheckTimeoutSeconds}}{{else}}{{config.defaultHealthcheckTimeoutSeconds}}{{/if}}</span> second timeout every <span class="healthcheck-number">{{#if data.task.taskRequest.deploy.healthcheckIntervalSeconds}}{{data.task.taskRequest.deploy.healthcheckIntervalSeconds}}{{else}}{{config.defaultHealthcheckIntervalSeconds}}{{/if}}</span> second(s) until <span class="healthcheck-number">HTTP 200</span> is received, or <span class="healthcheck-number">{{#if data.task.taskRequest.deploy.deployHealthTimeoutSeconds}}{{data.task.taskRequest.deploy.deployHealthTimeoutSeconds}}{{else}}{{config.defaultDeployHealthTimeoutSeconds}}{{/if}}</span> seconds have elapsed.
         </div>
@@ -19,7 +27,7 @@
                     </thead>
                     <tbody>
                         {{#each data.healthcheckResults}}
-                            <tr>
+                            <tr {{#if ../data.showRecentHealthchecksOnly}}{{#ifNotEqual @index 0}} style='display:none' {{/ifNotEqual}}{{/if}}>
                                 <td>
                                    {{timestampFormattedWithSeconds timestamp}}
                                 </td>
