add view/collapse toggle for healthchecks

--- a/SingularityUI/app/templates/taskDetail/taskHealthChecks.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskHealthChecks.hbs
@@ -1,16 +1,20 @@
 {{#if synced}}
     {{#if data.task.taskRequest.deploy.healthcheckUri}}
         <div class="page-header">
-            <h2>Healthchecks</h2>
+            <h2>
+                Healthchecks
+                <small>
+                    <a data-action="expandToggle">
+                        {{#if expanded}}
+                            collapse
+                        {{else}}
+                            view
+                        {{/if}}
+                    </a>
+                </small>
+            </h2>
         </div>
-        {{#ifGT data.healthcheckResults.length 1}}
-            <div class="checkbox">
-                <label>
-                    <input id="toggle-Healthchecks" {{#if data.showRecentHealthchecksOnly}}{{else}}checked="checked"{{/if}} type="checkbox"> 
-                    <strong>Show all Healthchecks </strong>
-                </label>
-            </div>
-        {{/ifGT}}
+        <div class='{{#unless expanded}}hide{{/unless}}'>
         <div class="well">
             Beginning on <span class="healthcheck-number">Task running</span>, hit <a class="healthcheck-link" target="_blank" href="http://{{data.task.offer.hostname}}:{{data.ports.[0]}}{{data.task.taskRequest.deploy.healthcheckUri}}">{{data.task.taskRequest.deploy.healthcheckUri}}</a> with a <span class="healthcheck-number">{{#if data.task.taskRequest.deploy.healthcheckTimeoutSeconds}}{{data.task.taskRequest.deploy.healthcheckTimeoutSeconds}}{{else}}{{config.defaultHealthcheckTimeoutSeconds}}{{/if}}</span> second timeout every <span class="healthcheck-number">{{#if data.task.taskRequest.deploy.healthcheckIntervalSeconds}}{{data.task.taskRequest.deploy.healthcheckIntervalSeconds}}{{else}}{{config.defaultHealthcheckIntervalSeconds}}{{/if}}</span> second(s) until <span class="healthcheck-number">HTTP 200</span> is received, or <span class="healthcheck-number">{{#if data.task.taskRequest.deploy.deployHealthTimeoutSeconds}}{{data.task.taskRequest.deploy.deployHealthTimeoutSeconds}}{{else}}{{config.defaultDeployHealthTimeoutSeconds}}{{/if}}</span> seconds have elapsed.
         </div>
@@ -27,7 +31,7 @@
                     </thead>
                     <tbody>
                         {{#each data.healthcheckResults}}
-                            <tr {{#if ../data.showRecentHealthchecksOnly}}{{#ifNotEqual @index 0}} style='display:none' {{/ifNotEqual}}{{/if}}>
+                            <tr>
                                 <td>
                                    {{timestampFormattedWithSeconds timestamp}}
                                 </td>
@@ -68,6 +72,7 @@
                 Healthchecks are disabled for this deploy
             </div>
         {{/if}}
+        </div>
     {{/if}}
 {{else}}
     <div class="page-loader centered cushy"></div>
