add timestamp to columns in slave view

--- a/SingularityUI/app/templates/slaves/slave.hbs
+++ b/SingularityUI/app/templates/slaves/slave.hbs
@@ -13,6 +13,7 @@
                 {{#ifInSubFilter data.[0].state 'ACTIVE'}}
                     <th>Activated By</th>
                 {{/ifInSubFilter}}
+                <th>Timestamp</th>
                 <th data-sortable="false"></th>
             </tr>
         </thead>
@@ -31,6 +32,7 @@
                     {{#ifInSubFilter state 'ACTIVE,DECOMMISSIONING,DECOMMISSIONED,STARTING_DECOMMISSION'}}
                         <td>{{ user }}</td>
                     {{/ifInSubFilter}}
+                    <td>{{timestampFormatted currentState.timestamp }}</td>
                     <td class="actions-column">
                         {{#ifInSubFilter state 'DECOMMISSIONING,DECOMMISSIONED,STARTING_DECOMMISSION'}}
                             <a data-slave-host="{{ host }}" data-slave-id="{{ id }}" data-state="{{ state }}" data-action="reactivate" title="Reactivate">
