--- a/SingularityUI/app/templates/taskDetail/taskOverview.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskOverview.hbs
@@ -71,9 +71,9 @@
 {{/if}}
 
 {{#if isDeployPending}}
-    {{#ifGT data.healthcheckResults.length 0}}
-        <div class="well text-muted">
-            <h4>Current Healthcheck</h4>
+    <div class="well text-muted">
+        <h4>Current Healthcheck</h4>
+        {{#ifGT data.healthcheckResults.length 0}}
             <div class="table-container">
                 <table class="table">
                     <thead>
@@ -85,43 +85,43 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {{#each data.healthcheckResults}}
-                            {{#ifLT @index 1}}
-                                <tr>
-                                    <td>
-                                       {{timestampFormattedWithSeconds timestamp}}
-                                    </td>
-                                    <td>
-                                       {{durationMillis}}{{#if durationMillis}}ms{{/if}}
-                                    </td>
-                                    <td>
-                                        {{#if statusCode}}
-                                            {{#ifEqual statusCode 200}}
-                                                <span class="label label-success">HTTP {{statusCode}}</span>
-                                            {{else}}
-                                                <span class="label label-danger">HTTP {{statusCode}}</span>
-                                            {{/ifEqual}}
-                                        {{else}}
-                                            <span class="label label-warning">No Response</span>
-                                        {{/if}}
-                                    </td>
-                                    <td>
-                                        <pre class="healthcheck-message">{{#if errorMessage}}{{errorMessage}}{{else}}{{responseBody}}{{/if}}</pre>
-                                    </td>
-                                    <td class="actions-column">
-                                        <a data-index="{{@index}}" data-key="healthcheckResults" data-action="viewJsonProperty" title="JSON">
-                                            { }
-                                        </a>
-                                    </td>
-                                </tr>
-                            {{/ifLT}}
-                        {{/each}}
+                    {{#with healthCheck}}
+                        <tr>
+                            <td>
+                               {{timestampFormattedWithSeconds timestamp}}
+                            </td>
+                            <td>
+                               {{durationMillis}}{{#if durationMillis}}ms{{/if}}
+                            </td>
+                            <td>
+                                {{#if statusCode}}
+                                    {{#ifEqual statusCode 200}}
+                                        <span class="label label-success">HTTP {{statusCode}}</span>
+                                    {{else}}
+                                        <span class="label label-danger">HTTP {{statusCode}}</span>
+                                    {{/ifEqual}}
+                                {{else}}
+                                    <span class="label label-warning">No Response</span>
+                                {{/if}}
+                            </td>
+                            <td>
+                                <pre class="healthcheck-message">{{#if errorMessage}}{{errorMessage}}{{else}}{{responseBody}}{{/if}}</pre>
+                            </td>
+                            <td class="actions-column">
+                                <a data-index="{{@index}}" data-key="healthcheckResults" data-action="viewJsonProperty" title="JSON">
+                                    { }
+                                </a>
+                            </td>
+                        </tr>
+                       {{/with}}
                     </tbody>
                 </table>
             </div>
-            <a href="#health-checks" data-action="viewHealthchecks">View full healthcheck history</a>
-        </div>
-    {{/ifGT}}
+            <a href="#health-checks" data-action="viewHealthchecks">View full healthcheck history</a>    
+        {{else}}
+            <p>Deploy for this task is pending. Healthchecks not run yet.</p>
+        {{/ifGT}}
+    </div>
 {{/if}}
 
 
