--- a/SingularityUI/app/templates/slaves/slave.hbs
+++ b/SingularityUI/app/templates/slaves/slave.hbs
@@ -4,6 +4,7 @@
             <tr>
                 <th>ID</th>
                 <th>State</th>
+                <th>Since</th>
                 <th>Rack</th>
                 <th>Host</th>
                 <th class="hidden-xs">Uptime</th>
@@ -13,7 +14,6 @@
                 {{#ifInSubFilter data.[0].state 'ACTIVE'}}
                     <th>Activated By</th>
                 {{/ifInSubFilter}}
-                <th>Timestamp</th>
                 <th data-sortable="false"></th>
             </tr>
         </thead>
@@ -24,6 +24,7 @@
                         <a href="{{appRoot}}/tasks/active/{{ host }}">{{ id }}</a>
                     </td>
                     <td>{{ state }}</td>
+                    <td>{{timestampFormatted currentState.timestamp }}</td>
                     <td>{{ rackId }}</td>
                     <td>{{ host }}</td>
                     <td class="hidden-xs" data-value="{{ uptime }}">
@@ -32,7 +33,6 @@
                     {{#ifInSubFilter state 'ACTIVE,DECOMMISSIONING,DECOMMISSIONED,STARTING_DECOMMISSION'}}
                         <td>{{ user }}</td>
                     {{/ifInSubFilter}}
-                    <td>{{timestampFormatted currentState.timestamp }}</td>
                     <td class="actions-column">
                         {{#ifInSubFilter state 'DECOMMISSIONING,DECOMMISSIONED,STARTING_DECOMMISSION'}}
                             <a data-slave-host="{{ host }}" data-slave-id="{{ id }}" data-state="{{ state }}" data-action="reactivate" title="Reactivate">
