--- a/SingularityUI/app/templates/vex/requestRun.hbs
+++ b/SingularityUI/app/templates/vex/requestRun.hbs
@@ -7,8 +7,8 @@
 </div>
 <hr class='border-color-light-gray'>
 
-<p><input id="autoTail" name="autoTail" type="checkbox"> Wait for task to start, then start tailing:</p>
-
+<p><label class='label-light'><input id="autoTail" name="autoTail" type="checkbox"> Wait for task to start, then start tailing:</label></p>
+<div id="noFilenameError" class="alert alert-warning hide" role="alert">Please enter a filename or uncheck the box</div>
 <div class="vex-dialog-input">
 	<input id='filename' name="filename" type="text" class="vex-dialog-prompt-input" placeholder="e.g. service.log" value="">
 </div>
