--- a/cookbook/templates/default/singularity.yaml.erb
+++ b/cookbook/templates/default/singularity.yaml.erb
@@ -4,7 +4,7 @@ server:
   applicationContextPath: /
   connector:
     type: http
-    port: 7099
+    port: <%= node[:singularity][:port] %>
   requestLog:
     appenders:
       - type: file
