--- a/cookbook/templates/default/singularity-init.erb
+++ b/cookbook/templates/default/singularity-init.erb
@@ -2,8 +2,8 @@
 description "Singularity Service"
 
 env PATH=/usr/local/singularity/bin:/usr/local/sbin:/usr/sbin:/sbin:/usr/lib64/qt-3.3/bin:/usr/local/bin:/bin:/usr/bin
-env MESOS_HOME=/usr/local
-env MESOS_NATIVE_LIBRARY=/usr/local/lib/libmesos.so
+env MESOS_HOME=<%= node[:mesos][:prefix] %>
+env MESOS_NATIVE_LIBRARY=<%= node[:mesos][:prefix] %>/lib/libmesos.so
 
 start on stopped rc RUNLEVEL=[2345]
 
