--- a/cookbook/templates/default/singularity-init.erb
+++ b/cookbook/templates/default/singularity-init.erb
@@ -1,7 +1,7 @@
 #!upstart
 description "Singularity Service"
 
-env PATH=/usr/local/singularity/bin:/usr/local/sbin:/usr/sbin:/sbin:/usr/lib64/qt-3.3/bin:/usr/local/bin:/bin:/usr/bin
+env PATH=<%= node[:singularity][:home] %>/bin:/usr/local/sbin:/usr/sbin:/sbin:/usr/lib64/qt-3.3/bin:/usr/local/bin:/bin:/usr/bin
 env MESOS_HOME=<%= node[:mesos][:prefix] %>
 env MESOS_NATIVE_LIBRARY=<%= node[:mesos][:prefix] %>/lib/libmesos.so
 
