change base view/ctr/fetch setup

--- a/SingularityUI/app/styles/main.styl
+++ b/SingularityUI/app/styles/main.styl
@@ -52,10 +52,10 @@ a.disabled:hover
 table th
     text-align left
 
-#page, .navbar .container-fluid
+#page, .navbar .container-fluid, .container
     max-width 1500px
 
-#page
+#page, .container
     padding 0 20px 50px 20px
 
 .page-header small
