--- a/SingularityExecutor/src/main/resources/docker.sh.hbs
+++ b/SingularityExecutor/src/main/resources/docker.sh.hbs
@@ -12,22 +12,13 @@ CURRENT_DIR=`pwd`
 CGROUPS_GUID=${CURRENT_DIR##*runs/}
 CGROUPS_GUID=${CGROUPS_GUID%/*}
 
-function ensure_started_container {
-  status=`sudo -E -u {{{ runContext.user }}} docker inspect -f \{{.State.Running}} $1`
-  if [ "$status" = "true" ] ; then
-    echo "Container is running!"
-    running=1
-  else
-    echo "Continaer did not start properly"
-    running=0
-  fi
-}
-
 function check_contianer_running {
   status=`sudo -E -u {{{ runContext.user }}} docker inspect -f \{{.State.Running}} $1`
   if [ "$status" = "false" ] ; then
     echo "container is no longer running..."
     running=0
+  else
+    running=1
   fi
 }
 
@@ -120,30 +111,29 @@ DOCKER_NETWORK="--net=host"
 
 DOCKER_WORKDIR="/mnt/mesos/sandbox/{{{ runContext.taskAppDirectory }}}"
 
-DOCKER_OPTIONS="-d --name={{{ runContext.taskId }}} -w $DOCKER_WORKDIR $DOCKER_NETWORK $DOCKER_ENV $DOCKER_VOLUMES $DOCKER_PORTS"
+DOCKER_OPTIONS="--name={{{ runContext.taskId }}} -w $DOCKER_WORKDIR $DOCKER_NETWORK $DOCKER_ENV $DOCKER_VOLUMES $DOCKER_PORTS"
 
 echo "Ensuring {{{ runContext.taskAppDirectory }}} is owned by {{{ runContext.user }}}"
 mkdir -p {{{ runContext.taskAppDirectory }}}
 sudo chown -R {{{ runContext.user }}} {{{ runContext.taskAppDirectory }}}
 
 # Start up the container
-running=0
 
-echo "Starting continer with: sudo -E -u {{{ runContext.user }}} docker run $DOCKER_OPTIONS $DOCKER_IMAGE /bin/sh -c {{{bashEscaped runContext.cmd }}}"
-sudo -E -u {{{ runContext.user }}} docker run $DOCKER_OPTIONS $DOCKER_IMAGE /bin/sh -c {{{bashEscaped runContext.cmd }}}
-cid=$(sudo -E -u {{{ runContext.user }}} docker inspect -f \{{.Id}} {{{ runContext.taskId }}})
+echo "Starting continer with: sudo -E -u {{{ runContext.user }}} docker run $DOCKER_OPTIONS $DOCKER_IMAGE {{{ runContext.cmd }}}"
+sudo -E -u {{{ runContext.user }}} docker run $DOCKER_OPTIONS $DOCKER_IMAGE {{{runContext.cmd }}} >> {{{ runContext.logFile }}} 2>&1 &
+#cid=$(sudo -E -u {{{ runContext.user }}} docker inspect -f \{{.Id}} {{{ runContext.taskId }}})
+cid={{{ runContext.taskId }}}
+running=1
 
 setup_signals "$cid" "handle_signal" SIGINT SIGTERM
 
-ensure_started_container "$cid"
-
 set +e
 setup_cgroups "$cid" "$CGROUPS_GUID"
-set -e
+
 
 # Attach for logging and wait for signals, then exit with container exist status
-sudo -E -u {{{ runContext.user }}} docker attach "$cid" >> {{{ runContext.logFile }}} 2>&1 &
-logger_pid="$!"
+#sudo -E -u {{{ runContext.user }}} docker attach "$cid" >> {{{ runContext.logFile }}} 2>&1 &
+set -e
 
 while true; do
   if [ "$running" = "1" ]; then
