--- a/SingularityUI/app/templates/status.hbs
+++ b/SingularityUI/app/templates/status.hbs
@@ -183,7 +183,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="page-header">
-            <h2>Singularity schedular instances</h2>
+            <h2>Singularity scheduler instances</h2>
         </div>
         <table class="table table-striped">
             <thead>
