don't 404 deleted requests, show a message instead

--- a/SingularityUI/app/styles/detailHeader.styl
+++ b/SingularityUI/app/styles/detailHeader.styl
@@ -52,6 +52,9 @@
         &[data-state='SYSTEM_COOLDOWN']
             color #BF5D36
         
+        &[data-state='DELETED']
+            color #ff0000
+        
         &:empty
             display none
 
