--- a/SingularityUI/app/templates/requestDetail/requestBase.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestBase.hbs
@@ -3,6 +3,10 @@
     <div class="page-loader centered cushy"></div>
 </div>
 
+<div class="col-md-12" id="task-history-msg">
+   
+</div>
+
 <div class="col-md-12" id="active-deploy">
     
 </div>
