taskHistoryTask should be renamed requestHistoryTask

--- a/SingularityUI/app/templates/requestDetail/requestBase.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestBase.hbs
@@ -3,7 +3,7 @@
     <div class="page-loader centered cushy"></div>
 </div>
 
-<div class="col-md-12" id="task-history-msg">
+<div class="col-md-12" id="request-history-msg">
    
 </div>
 
