add username to deleted message

--- a/SingularityUI/app/templates/requestDetail/requestHistoryMsg.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestHistoryMsg.hbs
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class='alert alert-warning'>
-        <strong>Note: </strong> This request was deleted {{timestampFromNow data.[0].createdAt}}. All active and scheduled tasks will not run again unless it is reposted to Singularity.
+        <strong>Note: </strong> This request was deleted {{timestampFromNow data.[0].createdAt}}, by {{data.[0].user}}. All active and scheduled tasks will not run again unless it is reposted to Singularity.
     </div>
 {{/ifEqual}}
 
